# wi-tui

./: .rustfmt.toml  Cargo.toml  README.md
examples/: calculator.rs  container.rs  demo.rs  flex.rs  flex_test.rs  leak_test.rs  mgmt.rs  nmcli.rs  paragraph.rs  spreadsheet.rs  tmux.rs  windows.rs
src/: canvas.rs  lib.rs  log.rs  rect.rs  render.rs  util.rs
src/widgets/: align.rs  borderbox.rs  bordered.rs  borders.rs  button.rs  checkbox.rs  column.rs  columnview.rs  container.rs  expand.rs  expanded.rs  fillchar.rs  flex.rs  flexible.rs  frame.rs  hook.rs  leak.rs  min.rs  minimize.rs  mod.rs  padding.rs  repeat.rs  row.rs  rowview.rs  stack.rs  style.rs  styled.rs  table.rs  text.rs  textinput.rs
src/widgets/table/: column.rs  data.rs  mod.rs  row.rs
