[package]
name = "witui"
version = "0.1.0"
authors = ["Natanael Rabello <natanaeljrabello@gmail.com"]
edition = "2018"

[dependencies]
crossterm = "0.20.0"
euclid = "0.22.6"
log = { version = "0.4.14", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }

[features]
logging = ["log", "pretty_env_logger"]

[dev-dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"

[[example]]
name = "demo"
[[example]]
name = "mgmt"
[[example]]
name = "nmcli"
[[example]]
name = "spreadsheet"
[[example]]
name = "flex"
[[example]]
name = "container"
[[example]]
name = "leak_test"
