[package]
name = "witui"
version = "0.1.0"
authors = ["Natanael Rabello <natanaeljrabello@gmail.com"]
edition = "2018"

[dependencies]
crossterm = "0.20.0"
euclid = "0.22.6"
textwrap = "0.14.2"
justify = "0.1.3"
log = { version = "0.4.14", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }

[features]
logging = ["log", "pretty_env_logger"]

[dev-dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
